tests/http/requests/deferred/invalid/obs_fold_01.py
from web_server.errors import ObsoleteFolding

request = ObsoleteFolding
